; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/camera/extr_msm_vfe8x_proc.c_vfe_camif_stop_immediately.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/camera/extr_msm_vfe8x_proc.c_vfe_camif_stop_immediately.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@CAMIF_COMMAND_STOP_IMMEDIATELY = common dso_local global i32 0, align 4
@ctrl = common dso_local global %struct.TYPE_2__* null, align 8
@CAMIF_COMMAND = common dso_local global i64 0, align 8
@VFE_CGC_OVERRIDE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @vfe_camif_stop_immediately to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vfe_camif_stop_immediately() #0 {
  %1 = load i32, i32* @CAMIF_COMMAND_STOP_IMMEDIATELY, align 4
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ctrl, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 0
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @CAMIF_COMMAND, align 8
  %6 = add nsw i64 %4, %5
  %7 = call i32 @writel(i32 %1, i64 %6)
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ctrl, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @VFE_CGC_OVERRIDE, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i32 @writel(i32 0, i64 %12)
  ret void
}

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
